--- a/views/hotels/show.ejs
+++ b/views/hotels/show.ejs
@@ -9,22 +9,22 @@
 				<li class='list-group-item'>Info 2</li>
 				<li class='list-group-item'>Info 3</li>
 			</div>
-		<a class='btn btn-xs btn-primary' href='/campgrounds/'>Go Back</a>
+		<a class='btn btn-xs btn-primary' href='/hotels/'>Go Back</a>
 
 		</div>
 		<div class='col-md-9'>
 			<div class='thumbnail'>
-				<img class='img-responsive' src='<%= campground.image %>'>
+				<img class='img-responsive' src='<%= hotel.image %>'>
 				<div class='caption'>
-					<h4 class='pull-right'>$<%= campground.price %>/night</h4>
-					<h4><a href=''><%= campground.name %></a></h4>
-					<p><%= campground.description %></p>
+					<h4 class='pull-right'>$<%= hotel.price %>/night</h4>
+					<h4><a href=''><%= hotel.name %></a></h4>
+					<p><%= hotel.description %></p>
 					<p>
-						<em>Submitted by <%= campground.author.username %> </em>
+						<em>Submitted by <%= hotel.author.username %> </em>
 					</p>
-					<% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
-						<a class='btn btn-warning' href='/campgrounds/<%= campground._id %>/edit'>Edit</a>
-						<form class='delete-form' action='/campgrounds/<%= campground._id %>?_method=DELETE' method='POST'>
+					<% if(currentUser && hotel.author.id.equals(currentUser._id)){ %>
+						<a class='btn btn-warning' href='/hotels/<%= hotel._id %>/edit'>Edit</a>
+						<form class='delete-form' action='/hotels/<%= hotel._id %>?_method=DELETE' method='POST'>
 							<button class='btn btn-danger'>Delete</button>
 						</form>
 					<% } %>
@@ -33,18 +33,18 @@
 			</div>
 			<div class='well'>
 				<div class='text-right'>
-					<p><a class='btn btn-success' href='/campgrounds/<%= campground._id %>/comments/new'>Add New Comment</a></p>
+					<p><a class='btn btn-success' href='/hotels/<%= hotel._id %>/comments/new'>Add New Comment</a></p>
 				</div>
 				<hr>
-				<% campground.comments.forEach(function(comment){ %>
+				<% hotel.comments.forEach(function(comment){ %>
 				<div class='row'>
 					<div class='col-md-12'>
 						<strong><%= comment.author.username %></strong>
 						<span class='pull-right'>10 days ago</span>
 						<p><%= comment.text %> </p>
 					<% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
-						<a class='btn btn-xs btn-warning' href='/campgrounds/<%= campground._id%>/comments/<%=comment._id%>/edit'>Edit</a>
-						<form class='delete-form' action='/campgrounds/<%= campground._id%>/comments/<%=comment._id%>?_method=DELETE' method='POST'>
+						<a class='btn btn-xs btn-warning' href='/hotels/<%= hotel._id%>/comments/<%=comment._id%>/edit'>Edit</a>
+						<form class='delete-form' action='/hotels/<%= hotel._id%>/comments/<%=comment._id%>?_method=DELETE' method='POST'>
 							<input class='btn btn-xs btn-danger' value='Delete' type='submit'>
 						</form>
 						<% } %>
