--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,24 +1,28 @@
 <!DOCTYPE>
 <html>
-	<head>
-		<title>Yelp Camp</title>
-		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
-		<link rel='stylesheet' type='text/css' href='/stylesheets/main.css'>
-	</head>
-	<body>
-			<nav class='navbar navbar-default'>
+
+<head>
+	<title>Happy Paw's Hotels</title>
+	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+		integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+	<link rel='stylesheet' type='text/css' href='/stylesheets/main.css'>
+</head>
+
+<body>
+	<nav class='navbar navbar-default'>
 		<div class='container-fluid'>
 			<div class='navbar-header'>
-				<a class='navbar-brand' href='/'>YelpCamp</a>
+				<a class='navbar-brand' href='/'><i class="fa fa-paw" aria-hidden="true"></i> Happy Paw's</a>
 			</div>
 			<div class='collapse navbar-collapse'>
 				<ul class='nav navbar-nav navbar-right'>
 					<% if(!currentUser){ %>
-						<li><a href='/login'>Login</a></li>
-						<li><a href='/register'>Sign Up</a></li>
+					<li><a href='/login'><i class="fas fa-user-circle"></i> Login</a></li>
+					<li><a href='/register'><i class="fas fa-user-plus"></i> Sign Up</a></li>
 					<% } else { %>
-						<li><a href='#'>Signed In As <%= currentUser.username %></a></li>
-						<li><a href='/logout'>Logout</a></li>
+					<li><a href='#'>Signed In As <%= currentUser.username %> <i class="fas fa-dog"></i></a></li>
+					<li><a href='/logout'><i class="fas fa-sign-out-alt"></i> Logout</a></li>
 					<% } %>
 				</ul>
 			</div>
@@ -36,6 +40,3 @@
 		</div>
 		<% } %>
 	</div>
-	
-	
-		
