--- a/views/hotels/show.ejs
+++ b/views/hotels/show.ejs
@@ -3,14 +3,18 @@
 <div class='container'>
 	<div class='row'>
 		<div class='col-md-3'>
-			<p class='lead'>Yelp Camp</p>
-			<div class='list-group'>
-				<li class='list-group-item active'>Info 1</li>
-				<li class='list-group-item'>Info 2</li>
+			<p class='lead'><%= hotel.name %></p>
+			<!-- <div class='list-group'>
+				<li role="presentation" class='list-group-item active'>Info 1</li>
+				<li class='list-group-item'>Info 9</li>
 				<li class='list-group-item'>Info 3</li>
-			</div>
-		<a class='btn btn-xs btn-primary' href='/hotels/'>Go Back</a>
-
+			</div> -->
+			<ul class="nav nav-pills nav-stacked list-group">
+				<a href="#" role="presentation" class="active list-group-item"><li>Info 1</li></a>
+				<a href="#" role="presentation" class="list-group-item"><li>Info 2</li></a>
+				<a href="#" role="presentation" class="list-group-item"><li>Info 3</li></a>
+			</ul>
+		<a class='btn btn-s btn-primary' href='/hotels/'>Go Back</a>
 		</div>
 		<div class='col-md-9'>
 			<div class='thumbnail'>
