--- a/views/hotels/new.ejs
+++ b/views/hotels/new.ejs
@@ -2,7 +2,7 @@
 
 <div class='container'>
 	<div class='row'>
-		<h1 style='text-align: center;'>Create a New hotel!</h1>
+		<h1 style='text-align: center;'>Add a new hotel!</h1>
 		<div style='width: 30%; margin: 25px auto;'>
 			<form action='/hotels' method='POST'>
 				<div class='form-group'>
