Spellings correction and further code cleaning

--- a/views/hotels/index.ejs
+++ b/views/hotels/index.ejs
@@ -4,7 +4,7 @@
 <header class='jumbotron'>
 	<div class='container'>
 
-	<h1>Welcome to Happy Paw's Hotels!</h1>
+	<h1>Welcome to Happy Paws Hotels!</h1>
 	<p>
 		Because too much.. is never enough.
 	</p>
