--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Happy Paw's Hotels</title>
+	<title>Happy Paws Hotels</title>
 	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
 		integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
@@ -13,7 +13,7 @@
 	<nav class='navbar navbar-default'>
 		<div class='container-fluid'>
 			<div class='navbar-header'>
-				<a class='navbar-brand' href='/'><i class="fa fa-paw" aria-hidden="true"></i> Happy Paw's</a>
+				<a class='navbar-brand' href='/'><i class="fa fa-paw" aria-hidden="true"></i> Happy Paws</a>
 			</div>
 			<div class='collapse navbar-collapse'>
 				<ul class='nav navbar-nav navbar-right'>
